# Logger

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
src/core/App/: App.cpp  App.h
src/core/Context/: Context.h
src/core/EventBus/: EventBus.cpp  EventBus.h
src/core/ServiceLocator/: ServiceLocator.h
